<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textSize="@dimen/details_text_size"
            android:hint="@string/search"
            android:inputType="text">
        </EditText>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_search_36"
            android:background="@color/invisible"
            android:contentDescription="@string/search" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:text="@string/previous_search"
        android:textColor="@color/light_brown"
        android:labelFor="@id/previous_search_rv"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_search_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_view_background"
        android:padding="@dimen/default_padding"
        tools:listitem="@layout/previous_search_rv_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        android:labelFor="@id/ranking_filter"
        style="@style/FilterLabel" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/ranking_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemedFilterGroup"
        app:toggle_requiredAmount="1"
        app:toggle_selectableAmount="1">
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_used_ingredients_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/max_used_ingredients"/>
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/min_missing_ingredients_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/min_missing_ingredients"/>
    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_recipes_returned"
        android:labelFor="@id/ranking_filter"
        style="@style/FilterLabel" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/max_recipes_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemedFilterGroup"
        app:toggle_requiredAmount="1"
        app:toggle_selectableAmount="1">
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_recipes_10_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/ten"/>
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_recipes_20_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/twenty"/>
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_recipes_30_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/thirty"/>
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_recipes_50_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/fifty"/>
        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/max_recipes_100_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FilterButton"
            app:toggle_text="@string/hundred"/>

    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:labelFor="@id/ingredients_filter"
        style="@style/FilterLabel"/>

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/ingredients_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemedFilterGroup">
        <ImageButton
            android:id="@+id/add_ingredients_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_circle_outline_32"
            android:background="@color/invisible"
            android:contentDescription="@string/add_ingredient" />
    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

</LinearLayout>